feat: Add piece blocking mechanism